; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/tui/extr_tui-file.c_tui_sfileopen.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/tui/extr_tui-file.c_tui_sfileopen.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ui_file = type { i32 }
%struct.tui_stream = type { i8*, i32, i32*, i32 }

@astring = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.ui_file* @tui_sfileopen(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.ui_file*, align 8
  %4 = alloca %struct.tui_stream*, align 8
  store i32 %0, i32* %2, align 4
  %5 = call %struct.ui_file* (...) @tui_file_new()
  store %struct.ui_file* %5, %struct.ui_file** %3, align 8
  %6 = load %struct.ui_file*, %struct.ui_file** %3, align 8
  %7 = call %struct.tui_stream* @ui_file_data(%struct.ui_file* %6)
  store %struct.tui_stream* %7, %struct.tui_stream** %4, align 8
  %8 = load i32, i32* @astring, align 4
  %9 = load %struct.tui_stream*, %struct.tui_stream** %4, align 8
  %10 = getelementptr inbounds %struct.tui_stream, %struct.tui_stream* %9, i32 0, i32 3
  store i32 %8, i32* %10, align 8
  %11 = load %struct.tui_stream*, %struct.tui_stream** %4, align 8
  %12 = getelementptr inbounds %struct.tui_stream, %struct.tui_stream* %11, i32 0, i32 2
  store i32* null, i32** %12, align 8
  %13 = load i32, i32* %2, align 4
  %14 = icmp sgt i32 %13, 0
  br i1 %14, label %15, label %28

15:                                               ; preds = %1
  %16 = load i32, i32* %2, align 4
  %17 = add nsw i32 %16, 1
  %18 = sext i32 %17 to i64
  %19 = mul i64 %18, 1
  %20 = trunc i64 %19 to i32
  %21 = call i8* @xmalloc(i32 %20)
  %22 = load %struct.tui_stream*, %struct.tui_stream** %4, align 8
  %23 = getelementptr inbounds %struct.tui_stream, %struct.tui_stream* %22, i32 0, i32 0
  store i8* %21, i8** %23, align 8
  %24 = load %struct.tui_stream*, %struct.tui_stream** %4, align 8
  %25 = getelementptr inbounds %struct.tui_stream, %struct.tui_stream* %24, i32 0, i32 0
  %26 = load i8*, i8** %25, align 8
  %27 = getelementptr inbounds i8, i8* %26, i64 0
  store i8 0, i8* %27, align 1
  br label %31

28:                                               ; preds = %1
  %29 = load %struct.tui_stream*, %struct.tui_stream** %4, align 8
  %30 = getelementptr inbounds %struct.tui_stream, %struct.tui_stream* %29, i32 0, i32 0
  store i8* null, i8** %30, align 8
  br label %31

31:                                               ; preds = %28, %15
  %32 = load i32, i32* %2, align 4
  %33 = load %struct.tui_stream*, %struct.tui_stream** %4, align 8
  %34 = getelementptr inbounds %struct.tui_stream, %struct.tui_stream* %33, i32 0, i32 1
  store i32 %32, i32* %34, align 8
  %35 = load %struct.ui_file*, %struct.ui_file** %3, align 8
  ret %struct.ui_file* %35
}

declare dso_local %struct.ui_file* @tui_file_new(...) #1

declare dso_local %struct.tui_stream* @ui_file_data(%struct.ui_file*) #1

declare dso_local i8* @xmalloc(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
